--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-title: Mostly Clear # your site title
+title: LAMMPS learning # your site title
 author: Colin # You :P
 description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
